--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PixelForge</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <nav>
+        <div class="nav">
+            <h1>PixelForge</h1>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#testimonials">Testimonials</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+                <input type="text" placeholder="Search...">
+            </div>
+        </div>
+    </nav>
+
 </body>
 </html>
