--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     
     <nav>
         <div class="nav">
+            <div class="logo-container">
+                <img src="https://i.pinimg.com/474x/4b/74/67/4b74678fb3c9aafdbb1edac044e6017a.jpg" alt="" class="logo">
             <h1>PixelForge</h1>
+            </div>
+
             <div class="nav-links">
                 <ul>
                     <li><a href="#home">Home</a></li>
