--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <div class="about">
+            <h2>About Us</h2>
+            <p>We are a creative web agency specializing in designing and developing stunning websites that drive results.</p>
+        </div>
+    </div>
     
 </body>
 </html>
